# isamerion

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  http_serve.py
assets/: Kurinto-LICENSE
cmake/: deps-win.cmake
src/: app.cpp  app.hpp  deps.hpp  main.cpp
src/core/: basic_types.hpp  clock.cpp  clock.hpp  matrix.hpp
src/gfx/: display_window.cpp  display_window.hpp  glbuffer.cpp  glbuffer.hpp  glshader.cpp  glshader.hpp
src/nbody/: galaxy_renderer.cpp  galaxy_renderer.hpp  galaxy_scene.cpp  galaxy_scene.hpp  nbody_sim.cpp  nbody_sim.hpp
www/: index.html  main.js
